# tsw

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/build_deb/: Cargo.toml
crates/build_deb/src/: binding.rs  config.rs  main.rs  types.rs
src/: config.rs  error.rs  macros.rs  main.rs  shell.rs  su.rs  termux.rs
src/shell/: binding.rs  termux.rs  test.rs
src/su/: binding.rs  env.rs
termux/: manifest_aarch64.json  manifest_arm.json
