[package]
name = "tsw"
version = "0.3.1"
edition = "2024"
authors = ["NTeditor <nteditor4@gmail.com>"]
description = "SU wrapper for termux"
license = "GPL-3.0-only"
repository = "https://github.com/nteditor/tsw"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.48", features = ["derive"] }
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
